--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -60,6 +60,7 @@
       <HintPath>..\..\..\..\Desktop\v4.5.2\MySql.Web.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
