--- a/Localization/App.config
+++ b/Localization/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <connectionStrings>
+      <add name="mySQLConnString" connectionString="server=localhost;database=localization;uid=root;pwd=jingaolst" />
+    </connectionStrings>
 </configuration>
